@@ -13,6 +13,7 @@ These single-character commands are available:\n\
 A       - EXPLAIN ANALYZE (UPDATE/DELETE safe)\n\
 C       - toggle the use of color\n\
 E       - show execution plan (UPDATE/DELETE safe)\n\
+I       - show I/O statistics per process\n\
 L       - show locks held by a process\n\
 M       - sort by memory usage\n\
 N       - sort by pid\n\
@@ -25,7 +26,7 @@ c       - toggle the display of process commands\n\
 d       - change number of displays to show\n\
 e       - list errors generated by last \"kill\" or \"renice\" command\n\
 h or ?  - help; show this text\n\
-i or I  - toggle the displaying of idle processes\n\
+i       - toggle the displaying of idle processes\n\
 k       - kill processes; send a signal to a list of processes\n\
           not avilable when connected to a remote database\n\
 n or #  - change number of processes to display\n\
